--- a/src/card.html
+++ b/src/card.html
@@ -1,4 +1,5 @@
 <template>
+	<require from='./resources/main.css'></require>
 	<require from="bootstrap/css/bootstrap.css"></require>
 	<div class="well well-lg">
 		<form role="form" submit.trigger="submit(cardTitle,description)">
