--- a/src/app.html
+++ b/src/app.html
@@ -1,9 +1,8 @@
 <template>
-	<div class="container">
-		<div class="jumbotron">
-			<h1 align="center">${heading}</h1>
-		</div>
+	<require from="nav-bar.html"></require>
+	<nav-bar router.bind="router"></nav-bar>
+	<div class="page-host" style="padding-top: 2%; ">
+		<router-view></router-view>
 	</div>
-	<compose view-model="login"></compose>
-	<compose view-model="board"></compose>
+
 </template>
