--- a/src/board.html
+++ b/src/board.html
@@ -1,4 +1,5 @@
 <template>
+	<require from='./resources/main.css'></require>
 	<require from="./list"></require>
 	<div class="page-header">
 		<h1 align="left">${boardName}</h1>
