--- a/src/login.html
+++ b/src/login.html
@@ -3,7 +3,7 @@
 	<div class="container">
 		<div class="col-md-6">
 			<div id="logbox">
-				<form id="signup" >
+				<form id="login">
 					<h1>account login</h1>
 					<input value.bind="email" name="email" type="email" placeholder="enter your email" class="input pass" />
 					<input value.bind="password" name="password" type="password" placeholder="enter your password" required="required" class="input pass" />
