--- a/src/signup.html
+++ b/src/signup.html
@@ -3,14 +3,14 @@
 	<div class="container">
 		<div class="col-md-6">
 			<div id="logbox">
-				<form id="signup" method="post" action="/signup">
+				<form id="signup">
 					<h1>create an account</h1>
-					<input name="user[name]" type="text" placeholder="What's your username?" pattern="^[\w]{3,16}$" autofocus="autofocus" required="required"
+					<input value.bind="login" type="text" placeholder="What's your username?" pattern="^[\w]{3,16}$" autofocus="autofocus" required="required"
 						class="input pass" />
-					<input name="user[password]" type="password" placeholder="Choose a password" required="required" class="input pass" />
-					<input name="user[password2]" type="password" placeholder="Confirm password" required="required" class="input pass" />
-					<input name="user[email]" type="email" placeholder="Email address" class="input pass" />
-					<input type="submit" value="Sign me up!" class="inputButton" />
+					<input value.bind="password" type="password" placeholder="Choose a password" required="required" class="input pass" />
+					<input value.bind="password2" type="password" placeholder="Confirm password" required="required" class="input pass" />
+					<input value.bind="email" type="email" placeholder="Email address" class="input pass" />
+					<a class="btn btn-default"  class="inputButton"  click.delegate="signup(login, email, password, password2)">Sign me up!</a>
 					<div class="text-center">
 						already have an account? <a href="#login" id="login_id">login</a>
 					</div>
