--- a/src/board.html
+++ b/src/board.html
@@ -32,7 +32,7 @@
 	
 	<div>
 		<ul style="">
-			<li repeat.for="list of lists" style="width: 24%; margin-right: 10px; border-radius: 10px; float:left; display: inline; background-color: #8d8b8b">
+			<li repeat.for="list of lists" style="width: 24%;border-radius:50px;float:left; padding:5px; display: inline;">
 				<compose view-model="list"></compose>
 			</li>
 		</ul>
