--- a/src/list.html
+++ b/src/list.html
@@ -1,24 +1,24 @@
 <template>
 	<require from='./resources/main.css'></require>
 	<require from="./card"></require>
-	<div>
-		<div style="margin-bottom: 15px">
-			<label id="listName" ref="listNameLabel" style="display:inline; font-size:30px; margin-top: 7px; margin-left: 7px; display: none;">List Name</label>
-			<input  ref="inputNameArea" type="text" name="listNameField" placeholder="List Name" value.bind="nameList" style="font-size: 25px; width: 170px; margin-top: 7px; margin-left: 7px; display: inline; border-radius: 7px">
+	<div class="panel panel-default">
+		<div style="margin-bottom: 15px" class="panel-heading">
+			<label id="listName" value.bind="listTitle" ref="listNameLabel" style="display:inline; font-size:30px; margin-top: 7px; margin-left: 7px; display: none;">${listTitle}</label>
+			<input ref="inputNameArea" type="text" name="listNameField" placeholder="List Name" value.bind="nameList" style="font-size: 25px; width: 170px; margin-top: 7px; margin-left: 7px; display: inline; border-radius: 7px">
 			<button click.delegate="saveListName(nameList)" ref="saveListButton" type="button" class="btn btn-primary active" style="float:right; margin-top: 7px; margin-right: 7px; display: inline;">Save</button>
 			<button click.delegate="editListName()" ref="editListButton" type="button" class="btn btn-primary active" style="float:right; margin-top: 7px; margin-right: 7px; display: none;">Edit</button>
 		</div>
-		<div>
+		<div class="panel-body">
 
-				<li repeat.for="card of cards" style="width: 92%; margin-right: 7px; margin-left: 11px; margin-bottom: 10px; border-radius: 7px; float:left; display: inline; background-color: #4d4c4c">
-					<compose view-model="card"></compose>
-				</li>
+			<li repeat.for="card of cards" style="width: 92%; margin-right: 7px;  border-radius: 7px; float:left; display: inline;">
+				<compose view-model="card"></compose>
+			</li>
 
 		</div>
-		<div>
-		<button click.delegate="deleteList()" type="button" class="btn btn-primary active" style="float:left; margin-bottom: 7px; margin-left: 7px">Delete list</button>
-		<button click.delegate="archiveList()" type="button" class="btn btn-primary active" style="float:left; margin-bottom: 7px; margin-left: 16px">Archive list</button>
-		<button click.delegate="newCard()" type="button" class="btn btn-primary active" style="float:right; margin-bottom: 7px; margin-right: 7px">New Card</button>
+		<div class="panel-footer">
+			<button click.delegate="newCard()" type="button" class="btn btn-primary active" >New Card</button>
+			<button click.delegate="deleteList()" type="button" class="btn btn-primary active" >Delete list</button>
+			<button click.delegate="archiveList()" type="button" class="btn btn-primary active">Archive list</button>
 		</div>
 
 	</div>
