--- a/src/nav-bar.html
+++ b/src/nav-bar.html
@@ -1,23 +1,23 @@
 <template bindable="router">
 	<require from='./resources/main.css'></require>
-	<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+	<nav class="navbar navbar-default navbar-fixed-top" role="navigation" style="background-color:#026AA7;">
 		<div class="container-fluid">
 			<div class="navbar-header">
 				<a class="navbar-brand" href="#">
 					<i class="fa fa-home"></i>
-					<span><b>${router.title}</b></span>
+					<span style="color:#FFFFFF;"><b>${router.title}</b></span>
 				</a>
 			</div>
 			<ul class="nav navbar-nav">
 				<li repeat.for="item of router.navigation">
-					<a href.bind="item.href">${item.title}</a>
+					<a href.bind="item.href" style="color:#FFFFFF;">${item.title}</a>
 				</li>
 			</ul>
 			<ul class="nav navbar-nav navbar-right">
 				<li>
-					<a href="#signup"><img src='src/resources/img/signup2.png'> Sign Up</a>
+					<a href="#signup" style="color:#FFFFFF;"><img src='src/resources/img/signup2.png'> <b>Sign Up</b></a>
 				</li>
-				<li><a href="#login"><img src='src/resources/img/contact.png'> Login</a></li>
+				<li><a href="#login" style="color:#FFFFFF;"><img src='src/resources/img/contact.png'> <b>Login</b></a></li>
 			</ul>
 
 		</div>
