--- a/src/list.html
+++ b/src/list.html
@@ -3,10 +3,10 @@
 	<require from="./card"></require>
 	<div class="panel panel-default">
 		<div style="margin-bottom: 15px" class="panel-heading">
-			<label id="listName" value.bind="listTitle" ref="listNameLabel" style="display:inline; font-size:30px; margin-top: 7px; margin-left: 7px; display: none;">${listTitle}</label>
-			<input ref="inputNameArea" type="text" name="listNameField" placeholder="List Name" value.bind="nameList" style="font-size: 25px; width: 170px; margin-top: 7px; margin-left: 7px; display: inline; border-radius: 7px">
-			<button click.delegate="saveListName(nameList)" ref="saveListButton" type="button" class="btn btn-primary active" style="float:right; margin-top: 7px; margin-right: 7px; display: inline;">Save</button>
-			<button click.delegate="editListName()" ref="editListButton" type="button" class="btn btn-primary active" style="float:right; margin-top: 7px; margin-right: 7px; display: none;">Edit</button>
+			<label id="listName" value.bind="listTitle" ref="listNameLabel" style="display:inline; font-size:30px; margin-top: 7px; margin-left: 7px; display: inline;">${listTitle}</label>
+			<input ref="inputNameArea" type="text" name="listNameField" placeholder="List Name" value.bind="nameList" class="form-control" style="font-size: 25px; width: 170px; margin-top: 7px; margin-left: 7px; display: none;">
+			<button click.delegate="saveListName(nameList)" ref="saveListButton" type="button" class="btn btn-primary active"  style="float:right; margin-top: 7px; margin-right: 7px; display: none;">Save</button>
+			<button click.delegate="editListName()" ref="editListButton" type="button" class="btn btn-primary active" style="float:right; margin-top: 7px; margin-right: 7px; display:inline;">Edit</button>
 		</div>
 		<div class="panel-body">
 
