Changed UI and improved connection with backend

--- a/src/card.html
+++ b/src/card.html
@@ -5,8 +5,8 @@
 		<div class="panel-heading">
 			<label id="cardName" value.bind="cardTitle" ref="cardNameLabel" style="display:inline; font-size:20px; display: inline;">${cardTitle}</label>
 			<input  ref="inputCardNameArea" type="text" name="cardNameField" class="form-control" placeholder="Card Name" value.bind="nameCard" style="font-size: 20px; width: 150px; display: none;">
-			<button click.delegate="saveCardName(nameCard, description)" ref="saveCardButton" type="button" class="btn btn-primary active" style="float:right; margin-top: 5px; margin-right: 5px; display: none;">Save</button>
-			<button click.delegate="editCardName()" ref="editCardButton" type="button" class="btn btn-primary active" style="float:right; margin-top: 5px; margin-right: 5px; display: inline;">Edit</button>
+			<button click.delegate="saveCardName(nameCard, description)" ref="saveCardButton" type="button" class="btn btn-primary active" style="float:right; margin-right: 5px; display: none;">Save</button>
+			<button click.delegate="editCardName()" ref="editCardButton" type="button" class="btn btn-primary active" style="float:right; margin-right: 5px; display: inline;">Edit</button>
 		</div>
 		<div class="panel-body">
 			<label style="margin-top: 7px; margin-left: 10px">Description:</label>
