--- a/src/list.html
+++ b/src/list.html
@@ -1,12 +1,20 @@
 <template>
 	<require from='./resources/main.css'></require>
+	<require from="bootstrap/css/bootstrap.css"></require>
 	<require from="./card"></require>
 	<div class="panel panel-default">
 		<div style="margin-bottom: 15px" class="panel-heading">
 			<label id="listName" value.bind="listTitle" ref="listNameLabel" style="display:inline; font-size:30px; margin-top: 7px; margin-left: 7px; display: inline;">${listTitle}</label>
-			<input ref="inputNameArea" type="text" name="listNameField" placeholder="List Name" value.bind="nameList" class="form-control" style="font-size: 25px; width: 170px; margin-top: 7px; margin-left: 7px; display: none;">
-			<button click.delegate="saveListName(nameList)" ref="saveListButton" type="button" class="btn btn-primary active"  style="float:right; margin-top: 7px; margin-right: 7px; display: none;">Save</button>
+			<input ref="inputNameArea" type="text" name="listNameField" placeholder="List Name" value.bind="nameList" class="form-control"
+				style="font-size: 25px; width: 170px; margin-top: 7px; margin-left: 7px; display: none;">
+			<button click.delegate="saveListName(nameList)" ref="saveListButton" type="button" class="btn btn-primary active" style="float:right; margin-top: 7px; margin-right: 7px; display: none;">Save</button>
 			<button click.delegate="editListName()" ref="editListButton" type="button" class="btn btn-primary active" style="float:right; margin-top: 7px; margin-right: 7px; display:inline;">Edit</button>
+			<button click.delegate="shiftBoardsRight()" type="button" class="btn btn-default" aria-label="Left Align" style="float:right; margin-top: 7px; margin-right: 7px; display:inline;">
+  				<span class="glyphicon glyphicon-arrow-right" aria-hidden="true"></span>
+			</button>
+			<button click.delegate="shiftBoardsLeft()" type="button" class="btn btn-default" aria-label="Left Align" style="float:right; margin-top: 7px; margin-right: 7px; display:inline;">
+  				<span class="glyphicon glyphicon-arrow-left" aria-hidden="true"></span>
+			</button>
 		</div>
 		<div class="panel-body">
 
@@ -16,8 +24,8 @@
 
 		</div>
 		<div class="panel-footer">
-			<button click.delegate="newCard()" type="button" class="btn btn-primary active" >New Card</button>
-			<button click.delegate="deleteList()" type="button" class="btn btn-primary active" >Delete list</button>
+			<button click.delegate="newCard()" type="button" class="btn btn-primary active">New Card</button>
+			<button click.delegate="deleteList()" type="button" class="btn btn-primary active">Delete list</button>
 			<button click.delegate="archiveList()" type="button" class="btn btn-primary active">Archive list</button>
 		</div>
 
