--- a/src/login.html
+++ b/src/login.html
@@ -1,15 +1,15 @@
 <template>
 	<require from='./resources/main.css'></require>
-	<div class="container">
-		<div class="col-md-6">
-			<div id="logbox">
-				<form id="login">
-					<h1>account login</h1>
+	<div class="container" style="text-align: center">
+		<div class="col-md-6" style="margin: 0 auto">
+			<div id="logbox" style="background-color: #e6e6e6">
+				<form id="login" >
+					<h1 style="color: #000000">Log in</h1>
 					<input value.bind="email" name="email" type="email" placeholder="enter your email" class="input pass" />
 					<input value.bind="password" name="password" type="password" placeholder="enter your password" required="required" class="input pass" />
 					<a class="btn btn-default"  class="inputButton"  click.delegate="login(email,password)">Sign me in!</a>
 					<div class="text-center">
-						<a href="#signup" id="">create an account</a> - <a id="">forgot password</a>
+						<a style="color: #000000" href="#signup" id="">Create an account</a> - <a style="color: #000000" id="">Forgot password?</a>
 					</div>
 				</form>
 			</div>
