--- a/src/signup.html
+++ b/src/signup.html
@@ -1,10 +1,10 @@
 <template>
 	<require from='./resources/main.css'></require>
-	<div class="container">
-		<div class="col-md-6">
-			<div id="logbox">
+	<div class="container" style="text-align: center">
+		<div class="col-md-6" style="margin: 0 auto">
+			<div id="logbox" style="background-color: #e6e6e6">
 				<form id="signup">
-					<h1>create an account</h1>
+					<h1 style="color: #000000">Create an account</h1>
 					<input value.bind="login" type="text" placeholder="What's your username?" pattern="^[\w]{3,16}$" autofocus="autofocus" required="required"
 						class="input pass" />
 					<input value.bind="password" type="password" placeholder="Choose a password" required="required" class="input pass" />
@@ -12,7 +12,7 @@
 					<input value.bind="email" type="email" placeholder="Email address" class="input pass" />
 					<a class="btn btn-default"  class="inputButton"  click.delegate="signup(login, email, password, password2)">Sign me up!</a>
 					<div class="text-center">
-						already have an account? <a href="#login" id="login_id">login</a>
+						Already have an account? <a style="color: #000000" href="#login" id="login_id">Login</a>
 					</div>
 				</form>
 			</div>
